# pgsg2-nir-raman-gating

./: .gitignore  ADR-0001-dataset-raman.md  pgsg_2_proposta.tex  pyproject.toml
scripts/: run_h1_raman.py
src/pgsg2/ingestion/: base.py  raman_bioprocess.py
src/pgsg2/models/: adapter.py
src/pgsg2/preprocessing/: raman.py
src/pgsg2/priors/: raman.py
tests/: test_model_adapter.py  test_raman_bioprocess.py  test_raman_preprocessing.py  test_raman_prior.py
